--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
+    "lodash": "^4.17.21",
     "nuxt": "^2.15.8",
     "rss-to-json": "^2.0.2",
     "vue": "^2.6.14",
